# Sync

./: .gitignore  ORCHESTRATOR_STATE.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: documents.py
backend/app/models/: document.py
backend/app/services/: parser.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/editor/: Tipper.tsx
frontend/src/components/editor/extensions/: TextId.ts
frontend/src/components/layout/: SidePanel.tsx
